# sointu-executable-msx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyinstaller.spec  pyproject.toml
.github/workflows/: build.yml
sointuexemsx/: __main__.py  play.asm  play.elf32.asm  wav.asm  wav.elf32.asm  wav.win32.asm
toolchain/: common.cmake
